--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.0",
+    "react-use": "^17.4.0",
     "styled-components": "^5.3.6"
   }
 }
